fix: add tls options for grpc connections

--- a/fly.toml
+++ b/fly.toml
@@ -7,21 +7,30 @@ app = 'sync-service-wandering-morning-6267'
 primary_region = 'lhr'
 
 [build]
-  [build.args]
-    GO_VERSION = '1.22'
+[build.args]
+GO_VERSION = '1.22'
 
 [env]
-  PORT = '8080'
+PORT = '8080'
 
 [http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 8080
+force_https = true
+auto_stop_machines = true
+auto_start_machines = true
+min_machines_running = 0
+processes = ['app']
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+memory = '1gb'
+cpu_kind = 'shared'
+cpus = 1
+
+[[services]]
+internal_port = 8080
+protocol = "tcp"
+
+[[services.ports]]
+handlers = ["tls"]
+port = 443
+tls_options = { "alpn" = ["h2"] }
