--- a/fly.toml
+++ b/fly.toml
@@ -13,14 +13,6 @@ GO_VERSION = '1.22'
 [env]
 PORT = '8080'
 
-[http_service]
-internal_port = 8080
-force_https = true
-auto_stop_machines = true
-auto_start_machines = true
-min_machines_running = 0
-processes = ['app']
-
 [[vm]]
 memory = '1gb'
 cpu_kind = 'shared'
@@ -29,8 +21,15 @@ cpus = 1
 [[services]]
 internal_port = 8080
 protocol = "tcp"
+min_machines_running = 2
+processes = ['app']
 
 [[services.ports]]
 handlers = ["tls"]
 port = 443
 tls_options = { "alpn" = ["h2"] }
+
+[services.concurrency]
+type = "connections"
+hard_limit = 1000
+soft_limit = 500
