--- a/fly.toml
+++ b/fly.toml
@@ -21,15 +21,11 @@ cpus = 1
 [[services]]
 internal_port = 8080
 protocol = "tcp"
-min_machines_running = 2
+min_machines_running = 1
+auto_start_machines = false
 processes = ['app']
 
 [[services.ports]]
 handlers = ["tls"]
 port = 443
 tls_options = { "alpn" = ["h2"] }
-
-[services.concurrency]
-type = "connections"
-hard_limit = 1000
-soft_limit = 500
