--- a/fly.toml
+++ b/fly.toml
@@ -21,15 +21,27 @@ cpus = 1
 [[services]]
 internal_port = 8080
 protocol = "tcp"
-min_machines_running = 2
+min_machines_running = 1
 processes = ['app']
-
-[[services.ports]]
-handlers = ["tls"]
-port = 443
-tls_options = { "alpn" = ["h2"] }
-
+  [[services.ports]]
+  handlers = ["tls"]
+  port = 443
+  tls_options = { "alpn" = ["h2"] }
 [services.concurrency]
 type = "connections"
 hard_limit = 1000
 soft_limit = 500
+
+[[services]]
+  internal_port = 8081
+  protocol = "tcp"
+  min_machines_running = 1
+  processes = ['app']
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 442
+  
+  [services.concurrency]
+  type = "connections"
+  hard_limit = 1000
+  soft_limit = 500
